input full width

--- a/src/components/TextField/index.scss
+++ b/src/components/TextField/index.scss
@@ -1,3 +1,9 @@
-input {
+@import "../../sass/abstracts.scss";
+
+.input-root {
+  width: 100%;
   max-width: 400px;
+  &--fullwidth {
+    max-width: 100%;
+  }
 }
