--- a/src/css/main.css
+++ b/src/css/main.css
@@ -3,6 +3,17 @@
 .m-1 {
     margin: 0.25rem
 }
+.m-0 {
+    margin: 0px
+}
+.mx-2 {
+    margin-left: 0.5rem;
+    margin-right: 0.5rem
+}
+.my-2 {
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem
+}
 .mt-1 {
     margin-top: 0.25rem
 }
@@ -24,18 +35,94 @@
 .ml-1 {
     margin-left: 0.25rem
 }
+.-mt-8 {
+    margin-top: -2rem
+}
+.mt-3 {
+    margin-top: 0.75rem
+}
 .flex {
     display: flex
 }
 .table {
     display: table
 }
+.h-20 {
+    height: 5rem
+}
+.h-full {
+    height: 100%
+}
+.max-h-screen {
+    max-height: 100vh
+}
+.w-full {
+    width: 100%
+}
+.list-none {
+    list-style-type: none
+}
+.flex-col {
+    flex-direction: column
+}
+.justify-start {
+    justify-content: flex-start
+}
+.justify-end {
+    justify-content: flex-end
+}
+.justify-between {
+    justify-content: space-between
+}
+.self-end {
+    align-self: flex-end
+}
+.rounded {
+    border-radius: 0.25rem
+}
+.bg-gray-100 {
+    --tw-bg-opacity: 1;
+    background-color: rgb(243 244 246 / var(--tw-bg-opacity))
+}
 .p-1 {
     padding: 0.25rem
+}
+.p-0 {
+    padding: 0px
+}
+.px-12 {
+    padding-left: 3rem;
+    padding-right: 3rem
+}
+.py-2 {
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem
 }
 .pb-0 {
     padding-bottom: 0px
 }
+.pr-10 {
+    padding-right: 2.5rem
+}
 .text-center {
     text-align: center
+}
+.text-red-500 {
+    --tw-text-opacity: 1;
+    color: rgb(239 68 68 / var(--tw-text-opacity))
+}
+.shadow-lg {
+    --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+    --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow)
+}
+.shadow-md {
+    --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+    --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
+    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow)
+}
+.shadow-none {
+    --tw-shadow: 0 0 #0000;
+    --tw-shadow-colored: 0 0 #0000;
+    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow)
 }
