--- a/src/css/main.css
+++ b/src/css/main.css
@@ -53,11 +53,17 @@
 .h-full {
     height: 100%
 }
+.h-44 {
+    height: 11rem
+}
 .max-h-screen {
     max-height: 100vh
 }
 .w-full {
     width: 100%
+}
+.w-44 {
+    width: 11rem
 }
 .transform {
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y))
@@ -113,10 +119,6 @@
 }
 .text-center {
     text-align: center
-}
-.ordinal {
-    --tw-ordinal: ordinal;
-    font-variant-numeric: var(--tw-ordinal) var(--tw-slashed-zero) var(--tw-numeric-figure) var(--tw-numeric-spacing) var(--tw-numeric-fraction)
 }
 .text-red-500 {
     --tw-text-opacity: 1;
