--- a/src/css/main.css
+++ b/src/css/main.css
@@ -6,6 +6,10 @@
 .m-0 {
     margin: 0px
 }
+.mx-1 {
+    margin-left: 0.25rem;
+    margin-right: 0.25rem
+}
 .mx-2 {
     margin-left: 0.5rem;
     margin-right: 0.5rem
@@ -53,17 +57,11 @@
 .h-full {
     height: 100%
 }
-.h-44 {
-    height: 11rem
-}
 .max-h-screen {
     max-height: 100vh
 }
 .w-full {
     width: 100%
-}
-.w-44 {
-    width: 11rem
 }
 .transform {
     transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y))
