--- a/src/components/IllustrationMessage/index.scss
+++ b/src/components/IllustrationMessage/index.scss
@@ -3,11 +3,11 @@
 .main-container {
   position: relative;
   height: 100vh;
-  background-color: rgb(13, 13, 70);
+  background: url(../../../assets/images/franz-nawrath-68dhWEZICig-unsplash.jpg);
 }
 .illustration {
-  height: 50vh;
-  width: 80%;
+  height: 85vh;
+  width: 90%;
   margin: 0;
   position: absolute;
   top: 50%;
@@ -24,30 +24,45 @@
   box-shadow: 0 1rem 3.5rem rgba(0, 0, 0, 0.5);
 }
 
+.main-content-container {
+  display: flex;
+  justify-content: space-around;
+  width: 98%;
+  height: 97%;
+  margin: 1rem;
+  padding: 1rem;
+  background: #f9f9f9 0% 0% no-repeat padding-box;
+  border-radius: 8px;
+}
+
 .content-container {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
-  margin: 1rem;
-  padding: 1rem;
-  background: #f9f9f9 0% 0% no-repeat padding-box;
-  border-radius: 8px;
   opacity: 1;
-  height: 95%;
+  margin: 20px;
+}
+
+.left-section {
+  width: 40%;
+  justify-content: start;
+  align-items: flex-start;
+  margin-top: 5%;
 }
 
 .illustration-title {
-  text-align: center;
-  font-size: 20px;
+  text-align: left;
+  font-size: 45px;
   letter-spacing: -0.5px;
   color: #0058a3;
   opacity: 1;
+  margin: 6% 0;
 }
 
 .image-container {
-  width: 180px;
-  height: 180px;
+  width: 95%;
+  height: 95%;
   svg {
     width: 100%;
     height: 100%;
@@ -55,9 +70,40 @@
 }
 
 .description {
-  font-size: 14px;
+  font-size: 20px;
   text-align: left;
   letter-spacing: 0px;
   color: #0058a3;
   opacity: 1;
+  margin: 6% 0;
+}
+
+.redirect-container {
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+}
+
+.redirect-link {
+  text-align: left;
+  letter-spacing: 0px;
+  color: #0058a3;
+  opacity: 1;
+  font-size: 14px;
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.back-btn {
+  font-size: 22px;
+  height: auto;
+  width: auto;
+  font-weight: normal;
+  padding: 5px 40px;
+  margin: 6% 0;
+}
+
+.arrow-icon {
+  width: 2rem;
+  height: 2rem;
 }
